# dinoct

./: .gitignore  README.md  pyproject.toml
configs/: ssl_default_config.yaml
configs/train/: oct.yaml
dinoct/: __main__.py  oct_metadata.py
dinoct/data/: __init__.py  adapters.py  augmentations.py  collate.py  loaders.py  transforms.py
dinoct/data/datasets/: __init__.py  decoders.py  extended.py  oct.py
dinoct/eval/: __init__.py  curve_metrics.py
dinoct/layers/: __init__.py  attention.py  block.py  dino_head.py  ffn_layers.py  patch_embed.py  rope.py
dinoct/loss/: __init__.py  dino_clstoken_loss.py  gram_loss.py  ibot_patch_loss.py  koleo_loss.py
dinoct/models/: __init__.py  convnext.py  vision_transformer.py
dinoct/train/: param_groups.py  post_train.py  post_train_skin_db.py  train.py
dinoct/train/core/: schedules.py
dinoct/utils/: __init__.py  utils.py
eval/: corruptions.py  evalset.py  evaluate_curve.py  run_paper.py  train_learned_baseline.py
eval/baselines/: __init__.py  learned.py
eval/classical/: __init__.py  evaluate.py  methods.py
eval/paper/: component_ablation.py  data_efficiency_tables.py  low_data.py  robustness.py  robustness_table.py  stress_analysis.py
scripts/: export_model.py  visualize.py
scripts/data/: curve_labeler.py
tools/: export_model.py  visualize.py
tools/data/: build_oct_manifest.py  build_oct_splits.py  curve_labeler.py  flatten_dataset.py
